[package]
name = "dungeoroo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
lazy_static = "1.4.0"
ran = "1.1.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlSelectElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }