[package]
name = "dungeoroo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-timers = "0.2.6"
hex = "0.4.3"
lazy_static = "1.4.0"
ran = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.84"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlSelectElement',
  'Window',
]
